--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="left_side">
             <div class="left_navigation">
-                <button class="add_box"><img src="element.png"></button>
+                <img src="element.png">
                 <div><img src="graph.png"></div>
                 <div><img src="medal-star.png"></div>
                 <div><img src="messages.png"></div>
@@ -115,5 +115,6 @@
     </div>
 </body>
 </html>
+
 
 
