--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="left_side">
             <div class="left_navigation">
-                <img src="element.png">
+                <div><img src="element.png"></div>
                 <div><img src="graph.png"></div>
                 <div><img src="medal-star.png"></div>
                 <div><img src="messages.png"></div>
@@ -115,6 +115,7 @@
     </div>
 </body>
 </html>
+
 
 
 
